<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".AddNewAccount">

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/hint_server"
		android:id="@+id/server"
		android:inputType="textUri"
		android:lines="1"
		android:singleLine="true"
		android:text="http://"
		android:textColor="@color/darkgray"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:nextFocusDown="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:lines="1"
		android:singleLine="true"
        android:imeOptions="actionDone"
		android:layout_gravity="top"
		android:layout_below="@+id/username"
		android:layout_alignLeft="@+id/username"
		android:layout_alignStart="@+id/username"
		android:nextFocusDown="@+id/createNewAccountButton"
		android:textColor="@color/darkgray" />

    <Button
    	android:id="@+id/createNewAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/create_new_account"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true" />

    <EditText
    	android:id="@+id/username"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
		android:ems="10"
    	android:hint="@string/hint_username"
    	android:imeOptions="actionNext"
    	android:lines="1"
		android:singleLine="true"
		android:layout_below="@+id/server"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="44dp"
		android:nextFocusDown="@+id/password"
		android:textColor="@color/darkgray" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/imageView"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:src="@drawable/vision_transparent"
		android:layout_above="@+id/server"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true" />

</RelativeLayout>
